# Bygningsreglementet_chat

./: README.md  app.py  main.py  pyproject.toml  rag.py  requirements.txt  scraper.py  scraper_cli.py  test_agentic_system.py
src/: __init__.py  config.py
src/agents/: __init__.py  agentic_rag_system.py  citation_agent.py  context_evaluator_agent.py  generator_agent.py  knowledge_retriever_agent.py  orchestrator.py  web_search_agent.py
src/rag/: __init__.py  generator.py  retriever.py
src/scraper/: __init__.py  web_scraper.py
src/ui/: __init__.py  app.py
src/utils/: logging.py  text_processing.py
tests/: test_config.py
